# obey-the-testing-goat

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitignore  .hintrc  .prettierignore  .tool-versions  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SCRATCHPAD.md  SECURITY.md  Vagrantfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.ci.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  test.yml
accounts/: authentication.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_token.py
accounts/templates/: login_email_sent.html
accounts/tests/: test_authentication.py  test_models.py  test_views.py
deploy_tools/: apache2.conf.j2  apache2.template.conf  collectstatic.sh  compose.template.yaml  compose.yaml  compose.yaml.j2  fabfile.py  inventory.ansible  provision.ansible.yaml  provisioning_notes.md  superlists-staging.service  superlists.service  superlists.service.j2
features/steps/: my_lists.py
functional_tests/: base.py  list_page.py  server_tools.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_sharing.py  test_simple_list_creation.py  tests.py
include/: apache2.conf
lists/: forms.py  models.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_item_list.py  0004_list_item_unique_together.py  0004_remove_duplicates.py  0005_list_owner.py  0005_unique_together.py  0006_list_shared_with.py
superlists/: settings.py  urls.py
tests/: functional_tests.py
(+14 files in other folders)
